--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="container">
         <h1>Студент Портфолиосы</h1>
         <p>Төмендегі студенттердің портфолиосын қараңыз:</p>
-        <a href="file:///C:/Users/User/Desktop/Olzhascode.html">Мырзахмет Олжас</a>
-        <a href="file:///C:/Users/User/Desktop/Danialcode.html">Мырзабек Даниал</a>
+        <a href="Olzhascode.html">Мырзахмет Олжас</a>
+        <a href="Danialcode.html">Мырзабек Даниал</a>
     </div>
 </body>
 </html>
