--- a/Olzhascode.html
+++ b/Olzhascode.html
@@ -49,27 +49,27 @@
         
         <div class="section">
             <h2>Отбасым</h2>
-            <a href="file:///C:/Users/User/Desktop/Olzhas1code.html" target="_blank">Отбасым туралы толығырақ</a>
+            <a href="Olzhas1code.html" target="_blank">Отбасым туралы толығырақ</a>
         </div>
 
         <div class="section">
             <h2>Хобби</h2>
-            <a href="file:///C:/Users/User/Desktop/Olzhas2code.html" target="_blank">Менің хоббилерім</a>
+            <a href="Olzhas2code.html" target="_blank">Менің хоббилерім</a>
         </div>
 
         <div class="section">
             <h2>Жетістіктер</h2>
-            <a href="file:///C:/Users/User/Desktop/Olzhas3code.html" target="_blank">Менің жетістіктерім</a>
+            <a href="Olzhas3code.html" target="_blank">Менің жетістіктерім</a>
         </div>
 
         <div class="section">
              <h2>Таңдаған мамандығым</h2>
-            <a href="file:///C:/Users/User/Desktop/Olzhas4code.html" target="_blank">Мен таңдаған мамандық</a>
+            <a href="Olzhas4code.html" target="_blank">Мен таңдаған мамандық</a>
         </div>
 
         <div class="section">
             <h2>Тарихта атымды қалай қалдырғым келеді</h2>
-            <a href="file:///C:/Users/User/Desktop/Olzhas5code.html" target="_blank">Менің тарихта қалдырар арманым</a>
+            <a href="Olzhas5code.html" target="_blank">Менің тарихта қалдырар арманым</a>
         </div>
     </div>
 </body>
