--- a/Danialcode.html
+++ b/Danialcode.html
@@ -49,27 +49,27 @@
         
         <div class="section">
             <h2>Отбасым</h2>
-            <a href="file:///C:/Users/User/Desktop/Dan1code.html" target="_blank">Отбасым туралы толығырақ</a>
+            <a href="Dan1code.html" target="_blank">Отбасым туралы толығырақ</a>
         </div>
 
         <div class="section">
             <h2>Хобби</h2>
-            <a href="file:///C:/Users/User/Desktop/Danik2code.html" target="_blank">Менің хоббилерім</a>
+            <a href="Danik2code.html" target="_blank">Менің хоббилерім</a>
         </div>
 
         <div class="section">
             <h2>Жетістіктер</h2>
-            <a href="file:///C:/Users/User/Desktop/Danik3code.html" target="_blank">Менің жетістіктерім</a>
+            <a href="Danik3code.html" target="_blank">Менің жетістіктерім</a>
         </div>
 
         <div class="section">
             <h2>Таңдаған мамандығым</h2>
-            <a href="file:///C:/Users/User/Desktop/Danik4code.html" target="_blank">Мен таңдаған мамандық</a>
+            <a href="Danik4code.html" target="_blank">Мен таңдаған мамандық</a>
         </div>
 
         <div class="section">
             <h2>Тарихта атымды қалай қалдырғым келеді</h2>
-            <a href="file:///C:/Users/User/Desktop/Danik5code.html" target="_blank">Менің тарихта қалдырар арманым</a>
+            <a href="Danik5code.html" target="_blank">Менің тарихта қалдырар арманым</a>
         </div>
     </div>
 </body>
